@@ -10,4 +10,10 @@
 ###############################################################################
 CDebugCorePlugin.0=No such debugger
 CDebugModel.0=Unable to set temporary breakpoint in main.\nReason: {0}\nContinue?
+CDebugUtils.0=[line: {0}]
+CDebugUtils.1=[address: {0}]
+CDebugUtils.2=[function: {0}]
+CDebugUtils.3=[ignore count: {0}]
+CDebugUtils.4=if
+CDebugUtils.5=at
 CDIDebugModel.0=Unable to parser binary information from file
