@@ -38,11 +38,5 @@ CDTDebugModelPresentation.22=(disabled)
 CDTDebugModelPresentation.23=Infinity
 CDTDebugModelPresentation.24=-Infinity
 CDTDebugModelPresentation.25=(disabled)
-CDTDebugModelPresentation.26=[line: {0}]
-CDTDebugModelPresentation.27=[address: {0}]
-CDTDebugModelPresentation.28=[function: {0}]
-CDTDebugModelPresentation.29=[ignore count: {0}]
-CDTDebugModelPresentation.30=if
-CDTDebugModelPresentation.31=at
 CBreakpointWorkbenchAdapterFactory.0=C/C++ breakpoint
 CBreakpointWorkbenchAdapterFactory.1=C/C++ watchpoint
